rendered/passbolt/Deployment-passbolt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passbolt
  namespace: passbolt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passbolt
      component: app
  template:
    metadata:
      labels:
        app: passbolt
        component: app
    spec:
      containers:
        - env:
            - name: APP_FULL_BASE_URL
              value: https://passbolt.local
            - name: DATASOURCES_DEFAULT_HOST
              value: mysql.passbolt.svc.cluster.local
            - name: DATASOURCES_DEFAULT_USERNAME
              value: passbolt
            - name: DATASOURCES_DEFAULT_PASSWORD
              value: passbolt123
            - name: DATASOURCES_DEFAULT_DATABASE
              value: passbolt
            - name: EMAIL_DEFAULT_FROM
              value: admin@passbolt.local
            - name: EMAIL_TRANSPORT_DEFAULT_HOST
              value: localhost
            - name: EMAIL_TRANSPORT_DEFAULT_PORT
              value: "587"
            - name: EMAIL_TRANSPORT_DEFAULT_TLS
              value: "false"
          image: passbolt/passbolt:latest-ce
          livenessProbe:
            httpGet:
              path: /healthcheck/status.json
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
          name: passbolt
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthcheck/status.json
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
            - mountPath: /etc/passbolt/gpg
              name: passbolt-gpg
            - mountPath: /etc/passbolt/jwt
              name: passbolt-jwt
      volumes:
        - name: passbolt-gpg
          persistentVolumeClaim:
            claimName: passbolt-gpg-pvc
        - name: passbolt-jwt
          persistentVolumeClaim:
            claimName: passbolt-jwt-pvc
