rendered/passbolt/Service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: passbolt
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
    component: database
