rendered/passbolt/Service-passbolt.yaml
apiVersion: v1
kind: Service
metadata:
  name: passbolt
  namespace: passbolt
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: passbolt
    component: app
