rendered/passbolt/Ingress-passbolt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: passbolt
  namespace: passbolt
spec:
  ingressClassName: traefik
  rules:
    - host: passbolt.local
      http:
        paths:
          - backend:
              service:
                name: passbolt
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - passbolt.local
      secretName: passbolt-tls
